# Srp

./: .gitignore  README.md
.claude/rules/: agent-specification.md  cli-standards.md  cloudflare-workers.md  cost-optimization.md  developer-workflow.md  hooks.md  iron-laws.md  karpathy-core.md  llm-integration.md  memory-knowledge.md  multi-agent.md  presentations.md  prompt-security.md  prompt-testing.md  rag-patterns.md  resiliencia.md  scraping-automation.md  seguridad.md  testing.md  tools-ecosystem.md
agents/: a1_categorizador.py  a3_precios.py  a4_email.py  a7_decisor.py  base.py  categorias.py
apps/landing/: index.html
docs/: informe-cto-ceo-srp-suite.md  plan-standards-v21.md  prompt-stitch-2.0-web-comercial.md  prompt-stitch-web.md
docs/Procedimientos standards/: INS.09008MPEF3 Filtro  de Aire F-10 (002).doc  generate_docx.py  (+4 more)
srp-suite-main/: .env.example  .gitignore  README.md  package.json  turbo.json
srp-suite-main/agents/nlm-agent/: .env.example  .gitignore  README.md  daemon.sh  pyproject.toml  test-pipeline.bat  test-pipeline.sh
srp-suite-main/agents/nlm-agent/deploy/: nlm-agent.service  nlm-daemon.service  setup-vm.sh
srp-suite-main/agents/nlm-agent/input/: PRO_0908_MPEF.md
srp-suite-main/agents/nlm-agent/nlm_agent/: __init__.py  auth_manager.py  gemini_agent.py  job_queue.py  main.py  mcp_client.py
srp-suite-main/agents/nlm-agent/prompts/: generate-audio.md  generate-infographic.md  generate-video.md
tests/: conftest.py  test_a1_self_critique.py  test_a3_self_critique.py  test_a4_self_critique.py  test_a7_self_critique.py
(+198 files in other folders)
